# immersion-dev-ai-agents

./: README.md
aula01/: aula01.py  pyproject.toml
aula02/: aula02.py  pyproject.toml
aula03/: aula03.py  pyproject.toml
