[project]
name = "aula02"
version = "0.1.0"
description = ""
authors = [
    {name = "ds-borges",email = "diego97sousa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "langchain-community (>=0.3.29,<0.4.0)",
    "faiss-cpu (>=1.12.0,<2.0.0)",
    "langchain-text-splitters (>=0.3.11,<0.4.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "langchain-google-genai (>=2.1.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "aula02", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
